Changed the pics.

--- a/paper/eacl/eacl2017.tex
+++ b/paper/eacl/eacl2017.tex
@@ -314,11 +314,11 @@ Results of Automated Evaluation:
 \end{table}
 
 
-\begin{figure*}[!h]
+\begin{figure}[h]
 	\center
 	\includegraphics[scale=0.34]{images/split.png}
 	\caption{\label{screen}Screenshot of the built QA system showing the orchestration flow for the question - ``problem with transfer order"}
-\end{figure*}
+\end{figure}
 
 \begin{table}[h]
 	\begin{center}
@@ -344,11 +344,11 @@ Results of Automated Evaluation:
 	\caption{\label{font-table} Evaluation Results }
 \end{table}
 
-\begin{figure*}[!h]
+\begin{figure}[h]
 	\center
 	\includegraphics[scale=0.34]{images/merge.png}
 	\caption{\label{screen}Screenshot of the built QA system showing the orchestration flow for the question - ``problem with transfer order"}
-\end{figure*}
+\end{figure}
 
 
 \subsubsection{Dictionary-filtered UoH corpora}
@@ -438,6 +438,48 @@ Sutras where Sandhi Split Applicable –2,700
 \end{center}
 \caption{\label{font-table} Evaluation Results }
 \end{table}
+
+
+\section{Sandhitype based analysis}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.34]{images/visarga.png}
+	\caption{\label{screen}Visarga}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.34]{images/consonant.png}
+	\caption{\label{screen}Consonant}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.34]{images/vowel.png}
+	\caption{\label{screen}vowel}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.34]{images/visargamerge.png}
+	\caption{\label{screen}Visarga Merge results}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.34]{images/consonantmerge.png}
+	\caption{\label{screen}Consonant Merge results}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.34]{images/vowelmerge.png}
+	\caption{\label{screen}vowel merge}
+\end{figure}
+
+
+
 
 \section{Analysis of Errors}
  Literature-Based Evaluation
