Latest eacl file

--- a/paper/eacl/eacl2017.tex
+++ b/paper/eacl/eacl2017.tex
@@ -34,7 +34,7 @@
 
 \newcommand\BibTeX{B{\sc ib}\TeX}
 
-\title{Evaluation of Sankrit Sandhi Tools}
+\title{Sanskrit Sandhi Splitting and Merging: Benchmark Datasets and Evaluation}
 
 \author{Dr. Rahul Garg \\
  IIT Delhi \\
@@ -50,27 +50,20 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-	
-	\textit{P\={a}\d{n}ini's} grammar saw the culmination of different thoughts into his monumental work \textit{A\d{s}\d{t}\={a}dhy\={a}y\={\i}}. The modern age of information theory has provided a new boost to the studies of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} from the perspective of information coding. 
-	
-	It is believed by many scholars that though \textit{P\={a}\d{n}ini's} has written a grammar for Sanskrit, the concepts he used are general ones and thus it provides a framework to write grammars for other languages.
-	
-	The \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} formulated in a morphologically, syntactically, and lexically regimented form of sanskrit. To maximize concision with a minimum of ambiguity, rules are compressed by systematically omitting repeated expressions from them, according to a procedure modeled on natural language syntax (\textit{anuv\d{r}tti})
-	
-	Sanskrit texts contain numerous words which are formed by the combination of two or more words. This process, known as Sandhi, takes place according to certain rules codified by the grammarian \textit{P\={a}\d{n}ini} in his \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}}. The reverse process of getting back the component words from the Sandhied words is known as Sandhi splitting. This paper attempts to evaluate the performance of the existing Sandhi tools.  The evaluation is done both with reference to the rules of Paanini and the words used in actual literature. The performance of the Sandhi tools is found to be terribly bad, and the possible reasons behind this are traced.  
-	
-	The word sandhi is an umbrella term that is used to refer to sound changes that take place when two sounds are close enough. The two sounds may merge to give a single sound, one of the two sounds (the former or the latter) may get changed/reduplicated before combining with the other, or even get elided. A new sound may also come in between. 
+	Sanskrit is one of the oldest and culturally rich languages that originated in 200 B.C. Learning the fundamentals of an old language will provide insights to the overall community of language modeling. There are two broad ways of performing language modeling: (i) Grammar model and (ii) probabilistic model. Words in Sanskrit language are formed by a process called Sandhi merging, which is a combination of two or more morphemes (component words). The reverse process of getting back the component words from the full words is known as Sandhi splitting. It is believed by many scholars that though \textit{P\={a}\d{n}ini's} has written a grammar for Sanskrit words in his monumental work called \textit{A\d{s}\d{t}\={a}dhy\={a}y\={\i}}. Analyzing and understanding word formation in Sanskrit is conceptually generic providing us with a framework to write grammars for other languages. However, the publicly available dataset such as the University of Hyderabad dataset is very erroneous making it challenging to evaluate automated algorithms. The primary contribution of this research work is to create a set of golden datasets with manually created ground truth made public for promoting open research in this fundamental problem. Further as the second contribution, we present the results of three publicly available tools for performing Sandhi splitting and Sandhi merging and benchmark their performance. We finally discuss the characteristics of each of the tool and emphasize the need for further research.
 \end{abstract}
 
 \section{Introduction}
 
-The importance of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is three fold. The first one, as is well known, as an almost exhaustive grammar for any natural language with meticulous details yet small enough to memorize. Though \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is written to describe the then prevalent Sanskrit language, it provides a grammatical framework which is general enough to analyse other languages as well. This makes the study of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} from the point of view of concepts it uses for language analysis important. The third aspect of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is its organization. The set of less than 4000 \textit{s\={u}tra} is similar to any computer program with one major difference the program being written for a human being and not for a machine thereby allowing some non-formal or semi-formal \textit{s\={u}tra} which require a human being to interpret and implement them. Nevertheless, we believe that the study of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} from programming point of view may lead to a new programming paradigm because of its rich structure.
+The basic constituents of a language are its characters which are joined together to form morphemes, which is the meaning fundamental part of a language that cannot further divided. Morphemes are combined together to form words, words are combined to form sentences, and sentences are combined to form large texts. The purpose of a language model is to understand the underlying rules and structure that comprises a language. There are two broad approaches for constructing a language model as follows:
+\begin{itemize}
+	\item \textbf{Grammar based model:} This approach is generally used to model complex but deterministic grammar based languages. The learning models can be rule based or typically require less training data.
+	\item \textbf{Probabilistic based model:} When a deterministic grammar is not available, a probabilistic language model can be learnt using a large corpus of data.
+\end{itemize}
 
-The \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is a list of rules. But these rules, too, are lists: of verbs, of suffixes, and so on. These lists have different headings, and these headings describe the behavior of the items they contain. But the \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is more complicated than this: ideas in one rule can carry over to the next, or to the next twenty; basic words have specialized meanings; and rules in one chapter may control rules in another. In this way, 	\textit{P\={a}\d{n}ini's} created a brief and immensely dense work. Thus, we have a large arrangement of different rules that we must try to understand.
+Sanskrit is one of the oldest languages designed by mankind having its origin in the Indo-Aryan civilization from 200B.C. Sanskrit has a rich tradition of poetry and literature works written, making it an important linguistic study. Being one of the oldest language, word formation in Sanskrit can be defined by set of deterministic rules and follows a defined structure. \textit{A\d{s}\d{t}\={a}dhy\={a}y\={\i}} (meaning a collection of eight books) by \textit{P\={a}\d{n}ini} is the source of Sanskrit's grammar, syntax, and semantics. The importance of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is three fold. The first one, as is well known, as an almost exhaustive grammar for any natural language with meticulous details yet small enough to memorize. Though \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is written to describe the then prevalent Sanskrit language, it provides a grammatical framework which is general enough to analyse other languages as well. This makes the study of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} from the point of view of concepts it uses for language analysis important. The third aspect of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is its organization. The set of less than 4000 \textit{s\={u}tra} is similar to any computer program with one major difference the program being written for a human being and not for a machine thereby allowing some non-formal or semi-formal \textit{s\={u}tra} which require a human being to interpret and implement them. Nevertheless, we believe that the study of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} from programming point of view may lead to a new programming paradigm because of its rich structure. In this way, 	\textit{P\={a}\d{n}ini's} created a brief and immensely dense work. 
 
-\textit{A\d{s}\d{t}\={a}dhy\={a}y\={\i}} (meaning a collection of eight books) by \textit{P\={a}\d{n}ini} is the source of Sanskrit grammar, syntax and semantics. The word  \textit{‘sandhi’} ``joining'', however, does not appear in any of the \textit{sutr\={a}} (rules) of \textit{p\={a}\d{n}ini}. There are certain rules that are governed by the condition of  \textit{sa\d{m}hit\={a}} which as defined in \textit{sutr\={a}} 109 of Chapter 4 of Book 1, means ‘closest proximity of letters’. These rules talk about the changes that take place when two letters are in ‘closest proximity’.
-\textit{sa\d{m}hit\={a}} is always applicable within a word, between an \textit{upasarg\={a}} and a verb root and between words in a compound formation. As regards other cases, it depends on how words are pronounced. If words of a sentence are spoken together without a hiatus,  \textit{sa\d{m}hit\={a}} applies and sound changes will take place at word boundaries. However, if there is a hiatus between two words, \textit{sa\d{m}hit\={a}} does not apply. 
- \textit{sutr\={a}} ``formulae/rules'' 73-157 of Chapter 1 of Book 6 and all rules of Chapters 3 and 4 of Book 8 describe the changes of sound under the condition of \textit{sa\d{m}hit\={a}}. The rules which govern change of sounds when \textit{sa\d{m}hit\={a}} is applicable are hereafter referred to as Sandhi (\textit{sa\d{m}dhi\d{h}}) rules.
+<<Write about Sandhi and splitting and merging>>
 
 
 \subsection{Types of Sandhi} - Sandhi can take place either within a word, or between two words. Thus, it is of two types:
